--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </section>
 
   <script>
-    const BASE_URL = 'https://api.calmind.site';
+    const BASE_URL = 'http://localhost:8000'
     let token = null;
     let consultationId = null;
 
